--- a/gstreamer/bash/simple-pipeline/.gitlab-ci.yml
+++ b/gstreamer/bash/simple-pipeline/.gitlab-ci.yml
@@ -68,6 +68,19 @@ docker-build-gstreamer-simple-pipeline-arm64v8:
     IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}
   stage: build
 
+docker-build-gstreamer-simple-pipeline-am62:
+  extends: .docker-build
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_PATCH}"
+  variables:
+    BASE_NAME: wayland-base-am62
+    IMAGE_NAME: sample-gstreamer-simple-pipeline-am62
+    IMAGE_ARCH: linux/arm64/v8
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}
+  stage: build
+
 docker-build-gstreamer-simple-pipeline-multiarch:
   extends: .docker-build-multiarch
   variables:
